# Grokking-the-Coding-Interview-Patterns-for-Coding-Questions

./: .gitignore  pyproject.toml  ruff.toml
1. Pattern Sliding Window/: Fruits into Baskets (medium).py  Longest Subarray with Ones after Replacement (hard).py  Longest Substring with K Distinct Characters (medium).py  Longest Substring with Same Letters after Replacement (hard).py  Maximum Sum Subarray of Size K (easy).py  No-repeat Substring (hard).py  Problem Challenge 1 - Permutation in a String (hard) .py  Problem Challenge 2 - String Anagrams (hard) .py  Problem Challenge 3 - Smallest Window containing Substring (hard).py  Problem Challenge 4 - Words Concatenation (hard) .py  Smallest Subarray with a given sum (easy).py
10. Pattern Subsets/: Balanced Parentheses (hard).py  Permutations (medium).py  Problem Challenge 2 - Structurally Unique Binary Search Trees (hard).py  Problem Challenge 3 - Count of Structurally Unique Binary Search Trees (hard).py  Subsets (easy).py  Subsets With Duplicates (easy).py  Unique Generalized Abbreviations (hard).py
11. Pattern Modified Binary Search/: Bitonic Array Maximum (easy).py  Ceiling of a Number (medium).py  Minimum Difference Element (medium).py  Next Letter (medium).py  Number Range (medium) .py  Order-agnostic Binary Search (easy).py  Problem Challenge 1 - Search Bitonic Array (medium).py  Problem Challenge 2 - Search in Rotated Array (medium) .py  Problem Challenge 3 - Rotation Count (medium).py  Search in a Sorted Infinite Array (medium).py
12. Bitwise XOR/: Complement of Base 10 Number (medium).py  (+1 more)
(+105 files in other folders)
